codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__plugin_mention_popup.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"▌ $sa                                                                                               "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  Sample Plugin  [Plugin] Plugin that includes the Figma MCP server and Skills for common workflows "
"                                                                                                    "
"  Press enter to insert or esc to close                                                             "
